Fix bug 552307: Profiler incorrectly reports memory taken by XML and XMLList (r=treilly+, r=wsharp+, sr=edwsmith+)